--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -851,7 +851,7 @@ section,
 
 .resume .resume-item h5 {
   font-size: 16px;
-  padding: 5px 15px;
+  /* padding: 5px 15px; */
   display: inline-block;
   font-weight: 600;
   margin-bottom: 10px;
