--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -170,6 +170,7 @@ h6 {
 }
 
 .header .header-social-links {
+  cursor: pointer;
   padding-right: 15px;
 }
 
@@ -481,6 +482,7 @@ h6 {
 
 .footer .social-links {
   margin: 0 0 30px 0;
+  cursor: pointer;
 }
 
 .footer .social-links a {
